@@ -11,6 +11,7 @@ fixed bugs:
 - fixed issue with negated variables in cons_xor.c
 - fixed issues with ungraceful termination when encountering unsupported expression operands in AMPL interface
 - fixed bug in cons_xor.c calling method on null pointer row
+- fixed bug in cons_abspower.c handling infinity values in propagation
 
 features:
 - can now output the solutions in the solution pool in the interactive shell
